# br-log

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: ROADMAP.md  index.html  llms.txt  rechtliches.html  zukunftsplanung.md
docs/assets/: og-card.html
docs/assets/screenshots/: README.md
scripts/: audit-tokens.mjs
specs/components/: button.md  chip.md  error-box.md  input.md  list-row.md  modal.md  settings-panel.md  toast.md
src/: App.tsx  styles.css  tokens.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql
src-tauri/plugins/biometric-unlock/: Cargo.toml  build.rs
src-tauri/plugins/biometric-unlock/android/: build.gradle.kts  proguard-rules.pro
src-tauri/plugins/biometric-unlock/android/src/main/: AndroidManifest.xml
src-tauri/plugins/biometric-unlock/android/src/main/java/: BiometricUnlockPlugin.kt
src-tauri/plugins/biometric-unlock/permissions/: default.toml
src-tauri/plugins/biometric-unlock/permissions/autogenerated/commands/: remove_key.toml  set_secure_screen.toml
src-tauri/plugins/biometric-unlock/src/: error.rs  lib.rs  models.rs
src-tauri/src/: app_settings.rs  crypto.rs  db_location.rs  file_io.rs  lib.rs  main.rs  saf_poc.rs  tray.rs
src/components/: AboutPanel.tsx  AppMenu.tsx  AppointmentAgenda.tsx  AppointmentDetail.tsx  AppointmentForm.tsx  AppointmentMonthGrid.tsx  BottomNav.tsx  CalendarView.tsx  DbInfoPanel.tsx  EntryDetail.tsx  EntryForm.tsx  EntryList.tsx  ExportPanel.tsx  Icon.tsx  ObjectionEditor.tsx  OccurrenceListRow.tsx  PrintReportPanel.tsx  RecoveryCodeReveal.tsx  ReminderSettings.tsx  SecurityPanel.tsx  SegmentedControl.tsx  SeriesScopeDialog.tsx  SettingsPanel.tsx  Sidebar.tsx  TagChip.tsx  TagFilterChips.tsx  TagManager.tsx  ThemeToggle.tsx  TopBar.tsx
src/db/: client.ts  ftsContent.ts  repository.test.ts  repository.ts  schema.ts
src/export/: exporters.test.ts  exporters.ts  glProjection.test.ts  glProjection.ts  reportPdf.test.ts  reportPdf.ts  toCsv.test.ts  toCsv.ts
src/export/__snapshots__/: reportPdf.test.ts.snap
src/lib/: appointmentUi.ts  appointments.test.ts  appointments.ts  auth.test.ts  auth.ts  backClose.ts  blurOnFocusLoss.ts  calendar.test.ts  calendar.ts  collections.ts  errors.test.ts  errors.ts  hotkey.test.ts  hotkey.ts  ics.test.ts  ics.ts  importPreview.test.ts  importPreview.ts  lockDelay.test.ts  lockDelay.ts  lockHotkey.ts  modalDraftStore.test.ts  modalDraftStore.ts  objections.test.ts  objections.ts  platform.test.ts  platform.ts  reminderOrchestrator.test.ts  reminderOrchestrator.ts  reminderScheduler.test.ts  reminderScheduler.ts  secureScreen.ts  theme.ts  time.test.ts  time.ts  tokens.test.ts  tokens.ts  ui.ts  useModalFocusTrap.ts  useReminderScheduler.ts  (+1 more)
src/views/: CalendarPage.tsx  DataView.tsx  HistoryView.tsx  LockScreen.tsx  QuickEntryView.tsx  StatsView.tsx  quickEntryDraft.test.ts  quickEntryDraft.ts
