[package]
name = "br-log"
version = "1.1.2"
description = "Betriebsrats-Zeiterfassung"
authors = ["Mario König <kontakt@koenig-mario.de>"]
license = "UNLICENSED"
edition = "2021"

[lib]
name = "br_log_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# DB-Layer: rusqlite mit gebundeltem SQLite (FTS5 fest eincompiliert) statt
# tauri-plugin-sql/sqlx. Grund: gemeinsame Basis für portablen absoluten DB-Pfad
# (Issue #1) UND spätere SQLCipher-Verschlüsselung (Feature "bundled-sqlcipher-…").
# KEINE prüfsummen-validierten Migrationen – Schema bleibt idempotent (schema.ts).
rusqlite = { version = "0.40", features = ["bundled-sqlcipher-vendored-openssl"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Passwort-Gate (Issue #1, Login Phase 1): Argon2id-Hashing. Feature "std" zieht
# password-hash/std -> rand_core/std -> getrandom, damit OsRng (Salt) verfügbar ist.
argon2 = { version = "0.5", features = ["std"] }
