[package]
name = "br-log"
version = "1.3.0"
description = "Betriebsrats-Zeiterfassung"
authors = ["Mario König <kontakt@koenig-mario.de>"]
license = "UNLICENSED"
edition = "2021"

[lib]
name = "br_log_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# DB-Layer: rusqlite mit gebundeltem SQLite (FTS5 fest eincompiliert) statt
# tauri-plugin-sql/sqlx. Grund: gemeinsame Basis für portablen absoluten DB-Pfad
# (Issue #1) UND spätere SQLCipher-Verschlüsselung (Feature "bundled-sqlcipher-…").
# KEINE prüfsummen-validierten Migrationen – Schema bleibt idempotent (schema.ts).
rusqlite = { version = "0.40", features = ["bundled-sqlcipher-vendored-openssl"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
# Plattform-Erkennung (Linux-Portierung): Frontend fragt darüber synchron
# ab, ob Windows/Linux/Android läuft (src/lib/platform.ts). Rust selbst
# braucht die Plattform aktuell nicht, das Plugin muss aber registriert sein
# (tauri_plugin_os::init()), damit die JS-Seite die Werte lesen kann.
tauri-plugin-os = "2"
# Verhindert eine zweite Instanz auf derselben (verschlüsselten) SQLite-DB:
# Zweitstart fokussiert stattdessen das bestehende Fenster (Desktop-only).
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Passwort-Gate (Issue #1, Login Phase 1): Argon2id-Hashing. Feature "std" zieht
# password-hash/std -> rand_core/std -> getrandom, damit OsRng (Salt) verfügbar ist.
argon2 = { version = "0.5", features = ["std"] }
# DB-Verschlüsselung (Issue #1, Phase 2): Key-Wrapping der DEK.
chacha20poly1305 = "0.10"        # XChaCha20-Poly1305 (AEAD) zum Kapseln der DEK
zeroize = { version = "1", features = ["zeroize_derive"] }
hex = "0.4"                       # DEK/Salts/Nonces als Hex in keyfile.json + PRAGMA key
rand_core = { version = "0.6", features = ["getrandom"] }  # OsRng fuer DEK/Recovery/Salt
# Datei-I/O-Abstraktion (file_io.rs): export_binary_file bekommt Binärinhalte
# (künftig PDF) Base64-kodiert vom Frontend, da Tauri-IPC-Argumente JSON sind.
base64 = "0.22"

# Android-Portierung (A-Core): Storage-Access-Framework-Zugriff (Save-/Open-
# Dialog, content://-URIs) für den Android-Arm von file_io.rs (mod android).
# Nur für Android gezogen -- auf Windows/Linux bleibt file_io.rs bei den
# bestehenden Desktop-Dialogen (tauri-plugin-dialog).
[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "28.2"
# Biometrie-Entsperren (Issue #2, B-Core): projektinternes Mobile-Plugin mit
# Kotlin-Teil (Android-Keystore + BiometricPrompt/CryptoObject). Nur Android --
# auf Desktop existiert weder das Plugin noch die bio_*-Android-Arme (siehe lib.rs
# und die desktop-Stubs der bio-Commands).
tauri-plugin-biometric-unlock = { path = "plugins/biometric-unlock" }
